--- a/app/src/components/More/More.module.css
+++ b/app/src/components/More/More.module.css
@@ -1,15 +1,9 @@
 .More {
-  width: 2em;
-  height: 2em;
-  text-align: center;
-  line-height: 2em;
-  margin-left: 40px;
   margin-right: 20px;
-  border-radius: 1em;
-  font-size: var(--MenuBarFontSize);
-  cursor: pointer;
+  color: #666;
 }
 
-.More:hover {
-  /* background: var(--MenuBarHoverBackground); */
+.More:hover svg,
+.More.Active svg {
+  color: #333;
 }
