feat: 优化 Link 菜单弹出时的效果；调试 WritableKeys

--- a/app/src/components/Content/Content.module.css
+++ b/app/src/components/Content/Content.module.css
@@ -18,10 +18,12 @@
   flex-shrink: 0;
   cursor: pointer;
   user-select: none;
+  border-radius: 6px;
 }
 
+.Link.Active,
 .Link:hover {
-  background: rgba(200, 200, 200, 0.1);
+  background: rgba(200, 200, 200, 0.3);
 }
 
 .Icon {
