--- a/app/src/components/Groups/Groups.module.css
+++ b/app/src/components/Groups/Groups.module.css
@@ -18,7 +18,7 @@
 }
 
 .Group:focus-visible {
-  outline: var(--menu-bar-font-color) solid 1px;
+  outline: var(--menu-bar-font-color) dashed 1px;
 }
 
 .Group.Active,
