--- a/app/src/components/Content/Content.module.css
+++ b/app/src/components/Content/Content.module.css
@@ -1,5 +1,7 @@
 .Content {
   flex: 1;
+  display: flex;
+  flex-direction: column;
   padding: 20px 80px 60px;
   overflow-y: auto;
 }
@@ -50,4 +52,13 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+.Empty {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.5;
 }
